# car-plate-recognition

./: .env  .gitignore  Aptfile  Dockerfile  README.md  pyproject.toml  requirements.txt  test.py
app/: app.py  car_plate_detection.py  main.py
backend/: app.py  car_plate_detection.py  car_plate_detection_easyocr.py  car_plate_detection_tesseract.py  test.py
