[project]
name = "car-plate-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.138.0",
    "matplotlib>=3.11.0",
    "opencv-python>=4.13.0.92",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "slowapi>=0.1.10",
    "ultralytics>=8.4.70",
]
